fix settings dropdown letter spacing

--- a/src/scss/stratifi/_app-btn.scss
+++ b/src/scss/stratifi/_app-btn.scss
@@ -1,9 +1,10 @@
 .btn {
+  letter-spacing: .1rem;
   font-weight: $btn-font-weight;
   @include transition(all .2s);
 
-  &:not(.text-title) {
-    letter-spacing: .1rem;
+  .dropdown-title & {
+    letter-spacing: normal;
   }
 
   &-icon {
